# Second_task_opencv

./: CMakeLists.txt  README.md
Armor/: Armor.cpp  Armor.h
ArmorDetector/: ArmorDetector.cpp  ArmorDetector.h
EnergyMechanism/: EnergyMechanism.cpp  EnergyMechanism.h
LightBar/: LightBar.cpp  LightBar.h
Main/: main.cpp
