CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(demo)

find_package(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(./Armor ./ArmorDetector ./EnergyMechanism ./LightBar ./Main)
AUX_SOURCE_DIRECTORY(./Armor DIR_SRCS)
AUX_SOURCE_DIRECTORY(./ArmorDetector DIR_SRCS)
AUX_SOURCE_DIRECTORY(./EnergyMechanism DIR_SRCS)
AUX_SOURCE_DIRECTORY(./LightBar DIR_SRCS)
AUX_SOURCE_DIRECTORY(./Main DIR_SRCS)

SET(TEST_MATH ${DIR_SRCS})
ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_MATH})
target_link_libraries(demo PRIVATE ${OpenCV_LIBS})
